# cipo

./: pyproject.toml
notebooks/: m_test.ipynb  testes.ipynb  visibility_test.ipynb
src/cipo/: __init__.py  graphics.py  mpc.py  neo.py  neo_option2.py  pcc.py  pcc_option2.py  visibility.py
