[project]
name = "cipo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "lucascorreasouza@id.uff.br" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "selenium>=4.36.0",
    "skyfield>=1.53",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
cipo = "cipo:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
